--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -44,3 +44,36 @@
     background: #282c34;
 }
 
+.contenedorLogin form{
+    width: 94%;
+    margin-left: 3%;
+    height: 350px;
+    margin-top:20px;
+    /* background: blue; */
+}
+
+.contenedorLogin form input{
+    width: 90%;
+    margin-left: 5%;
+    height: 50px;
+    border: none;
+    border-bottom: 1px solid grey;
+    font-size: 25px;
+    margin-top: 30px;
+}
+
+.contenedorLogin form input[type='submit']{
+    width: 70%;
+    margin-left: 15%;
+    border: none;
+    background: #282c34;
+    color: white;
+    font-size: 25px;
+    border-radius: 5px;
+    margin-top: 3em;
+    cursor: pointer;
+}
+
+.contenedorLogin form input[type='submit']:hover{
+    background: #575757;
+}
