--- a/src/Inicio/Inicio.css
+++ b/src/Inicio/Inicio.css
@@ -24,5 +24,7 @@
 .divContenidoInicio{
     width: 100%;
     height: 649px;
+    overflow-y: scroll;
+    /* background: grey; */
     float: left;
 }
