--- a/src/Perfil/Perfil.css
+++ b/src/Perfil/Perfil.css
@@ -7,17 +7,32 @@
 
 .divTituloPerfil{
     width: 100%;
-    height: 50px;
+    height: 70px;
     box-shadow: 0px 1px 3px grey;    
     margin-bottom: 1px;
     /* background: blue; */
     float: left;
 }
+.divFotoPerfil{
+    width: 4.5%;
+    height: 64px;
+    margin-top: 1px;
+    margin-left: 32%;
+    border-radius: 50px;
+    overflow: hidden;
+    border: 2px solid grey;
+    float: left;
+}
+
+.divFotoPerfil img{
+    width: 100%;
+    height: 64px;
+}
 
 .divTituloPerfil h2{
     font-size: 30px;
-    margin-top: 10px;
-    margin-left: 38%;
+    margin-top: 15px;    
+    margin-left: 2%;
     float: left;
 }
 
@@ -25,7 +40,7 @@
     float: left;
     width: 10%;
     height: 40px;
-    margin-top: 5px;
+    margin-top: 10px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -41,5 +56,6 @@
 .divContenedorPerfil{
     width: 100%;
     height: 649px;
+    overflow-y: scroll;
     float: left;
 }
