--- a/src/ComponenteVideo/ComponenteVideo.css
+++ b/src/ComponenteVideo/ComponenteVideo.css
@@ -1,24 +1,25 @@
 .divComponenteVideo{
-    width: 44%;
-    height: 400px;
+    width: 30%;
+    height: 300px;
     margin-left: 3%;
     margin-top: 20px;
     /* border: 1px solid gray; */
     border-radius: 5px;
     box-shadow: 3px 3px 3px gray;
     overflow: hidden;
+    background: #F7F7F7;
     float: left;
 }
 
 .divCompoenteVideoIzquierda{
     width: 100%;
-    height: 300px;
+    height: 200px;
     float: left;
 }
 
 .divCompoenteVideoIzquierda video{
     width: 100%;
-    height: 300px;
+    height: 200px;
     background: black;
 }
 
@@ -31,18 +32,18 @@
 
 .divComponenteVideoDerecha p{
     text-align: center;
-    /* margin-top: 10px; */
+    margin-top: 10px;
     font-size: 20px;
 }
 
 .divComponenteVideoDerecha input{
-    width: 50%;
+    width: 30%;
     height: 50px;
     background: #282c34;
     border-radius: 5px;
     color: white;
     border: none;
-    margin-left: 25%;
+    margin-left: 15%;
     margin-top: 5px;
     cursor: pointer;
 }
