--- a/src/Perfil/Perfil.css
+++ b/src/Perfil/Perfil.css
@@ -7,16 +7,18 @@
 
 .divTituloPerfil{
     width: 100%;
-    height: 70px;
+    height: 170px;
     box-shadow: 0px 1px 3px grey;    
     margin-bottom: 1px;
+    background-size: 100% 170px;
+    background-repeat: no-repeat;
     /* background: blue; */
     float: left;
 }
 .divFotoPerfil{
-    width: 4.5%;
-    height: 64px;
-    margin-top: 1px;
+    width: 7%;
+    height: 102px;
+    margin-top: 30px;
     margin-left: 32%;
     border-radius: 50px;
     overflow: hidden;
@@ -26,13 +28,15 @@
 
 .divFotoPerfil img{
     width: 100%;
-    height: 64px;
+    height: 102px;
 }
 
 .divTituloPerfil h2{
     font-size: 30px;
-    margin-top: 15px;    
+    margin-top: 70px;    
     margin-left: 2%;
+    color: white;
+    text-shadow: 3px 3px 3px grey;
     float: left;
 }
 
@@ -40,7 +44,7 @@
     float: left;
     width: 10%;
     height: 40px;
-    margin-top: 10px;
+    margin-top: 70px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -55,7 +59,7 @@
 
 .divContenedorPerfil{
     width: 100%;
-    height: 649px;
+    height: 549px;
     overflow-y: scroll;
     float: left;
 }
