--- a/src/Perfil/Perfil.css
+++ b/src/Perfil/Perfil.css
@@ -63,3 +63,20 @@
     overflow-y: scroll;
     float: left;
 }
+
+.divNohayVideos{
+    width: 50%;
+    height: 500px;
+    margin-top: 15px;
+    border-radius: 5px;
+    margin-left: 25%;
+    background: #FAFAFA;
+    box-shadow: 0px 0px 20px gray;
+    float: left;
+}
+
+.divNohayVideos h3{
+    text-align: center;
+    font-size: 50px;
+    margin-top: 150px;
+}
