--- a/src/ComponenteComentarios/ComponenteComentarios.css
+++ b/src/ComponenteComentarios/ComponenteComentarios.css
@@ -31,7 +31,8 @@
 .divCajaIzquierda{
     width: 48%;
     margin-left: 1%;
-    height: 700px;
+    height: 750px;
+    box-shadow: 0px 0px 20px grey;
     /* background: #F7F7F7; */
     float: left;
 }
@@ -51,9 +52,10 @@
 
 .divTituloCOmponenteComentarios{
     width: 100%;
-    height: 150px;
+    height: 100px;
     margin-top: 50px;
     background: white;
+    /* box-shadow: 0px 10px 20px grey; */
     float: left;
 }
 
@@ -74,7 +76,7 @@
     margin-left: 2%;
     height: 750px;
     background:white;
-    /* box-shadow: 0px 0px 10px black; */
+    box-shadow: 0px 0px 20px grey;
     float: left;
 }
 
