--- a/src/ComponenteVideo/ComponenteVideo.css
+++ b/src/ComponenteVideo/ComponenteVideo.css
@@ -4,7 +4,7 @@
     margin-left: 2.5%;
     margin-top: 20px;
     border-radius: 5px;
-    box-shadow: 3px 3px 3px gray;
+    box-shadow: 0px 0px 20px black;
     overflow: hidden;
     background: #F7F7F7;
     float: left;
