--- a/src/ComponenteComentarios/ComponenteComentarios.css
+++ b/src/ComponenteComentarios/ComponenteComentarios.css
@@ -33,6 +33,7 @@
     margin-left: 1%;
     height: 750px;
     box-shadow: 0px 0px 20px grey;
+    border-radius: 5px;
     /* background: #F7F7F7; */
     float: left;
 }
@@ -40,7 +41,8 @@
 .divVideoComponeteComentarios{
     width: 100%;
     height: 500px;
-    margin-top: 20px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     background: black;
     float: left;
 }
@@ -77,6 +79,7 @@
     height: 750px;
     background:white;
     box-shadow: 0px 0px 20px grey;
+    border-radius: 5px;
     float: left;
 }
 
