--- a/src/Seguidos/Seguidos.css
+++ b/src/Seguidos/Seguidos.css
@@ -1,12 +1,14 @@
 .divSeguidos{
-    width: 26.5%;
+    width: 25%;
     height: 0px;
     margin-left: 73.5%;
     margin-top: 150px;
     background: white;
     transition: all 300ms;
     overflow-y: scroll;
+    z-index: 2;
     position: absolute;
+    box-shadow: 0px 0px 20px black;
 }
 
 .divSeguidos input{
@@ -16,4 +18,20 @@
     border-radius: 50px;
     margin-right: 1%;
     float: right;
+}
+
+.vacio{
+    width: 90%;
+    height: 150px;
+    margin-top: 30px;
+    margin-left: 5%;
+    box-shadow: 0px 0px 20px gray;
+    border-radius: 5px;
+    float: left;
+}
+
+.vacio p{
+    text-align: center;
+    font-size: 25px;
+    margin-top: 50px;
 }
