--- a/src/Aside/Aside.css
+++ b/src/Aside/Aside.css
@@ -42,3 +42,56 @@ aside form input[type='submit']{
 aside form input[type='submit']:hover{
     background: #82B9D0;
 }
+
+.divUsuarioBuscado{
+    width: 98%;
+    min-height: 100px;
+    margin-left: 1%;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px gray;
+    margin-top: 20px;
+    float: left;
+}
+
+.divUsuarioBuscadoImagen{
+    width: 25%;
+    height: 90px;
+    margin-left: 1%;
+    border-radius: 50px;
+    border:2px solid grey;
+    overflow: hidden;
+    float: left;
+
+}
+
+.divUsuarioBuscadoImagen img{
+    width: 100%;
+    height: 90px;
+}
+
+.divUsuarioBuscado p{
+    min-width: 45%;
+    /* background: blue; */
+    height: 50px;
+    font-size: 30px;
+    margin-left: 2%;
+    margin-top: 20px;
+    float: left;
+}
+
+.divUsuarioBuscado input[type='button']{
+    width: 20%;
+    height: 40px;
+    margin-top: 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    color: white;
+    background: #282c34;
+    float: left;
+}
+
+.divUsuarioBuscado input[type='button']:hover{
+    background: #575757;
+}
