--- a/src/ComponenteBuscadorPerfil/ComponenteBuscadorPerfil.css
+++ b/src/ComponenteBuscadorPerfil/ComponenteBuscadorPerfil.css
@@ -67,7 +67,8 @@
 
 .divContenedorBuscador{
     width: 100%;
-    height: 530px;
+    height: 630px;
+    overflow-y: scroll;
     /* background: blue; */
     float: left;
 }
