--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,6 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #4C4C4C;
 }
